# aibandmanager

./: .gitignore  .pdm-python  NEXT_STEPS.md  README.md  exclude_list.md  gig_opportunities.csv  gig_opportunities_cleaned.csv  pyproject.toml  requirements.txt  setup.py  venue_list.md
src/: main.py
src/gig_investigator/: gig_opportunity.py  investigator.py
